--- a/index.html
+++ b/index.html
@@ -19,27 +19,36 @@
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/98789225" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
-    
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple Website</title>
+
+    <!-- CRM WhatsApp Button -->
+    <script id="crm-wa-button-script" src="https://app.i2crm.ru/api_v1/js/crm_wa_button_v1.js" 
+        data-source="ym" 
+        data-text="Здравствуйте. Номер заявки с сайта {u_code}">
+    </script>
+
+    <!-- WhatsApp Contact Button -->
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        .whatsapp-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #25d366;
+            color: white;
+            padding: 10px 15px;
+            border-radius: 50px;
             text-align: center;
-            padding: 50px;
-        }
-        h1 {
-            color: #333;
-        }
-        p {
-            font-size: 1.2em;
-            color: #666;
+            font-weight: bold;
+            text-decoration: none;
+            font-size: 16px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
 <body>
     <h1>Welcome to My Simple Website</h1>
     <p>This is a simple webpage hosted on GitHub Pages!</p>
+
+    <!-- WhatsApp Contact Button Link -->
+    <a href="https://wa.me/996703380946" class="whatsapp-button" target="_blank">Связаться с нами в WhatsApp</a>
 </body>
 </html>
